Fixed a contrast issue

--- a/css/global.css
+++ b/css/global.css
@@ -237,14 +237,14 @@ h3 {
 /* Header 4 */
 h4 {
   font-size: 1.25em;
-  color: gray;
+  color: #767676;
   font-weight: normal;
 }
 
 /* Header 5 */
 h5 {
   font-size: 1em;
-  color: gray;
+  color: #767676;
   font-weight: normal;
 }
 
@@ -263,7 +263,7 @@ blockquote {
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 2em;
-  color: gray;
+  color: #767676;
   width: 75%;
 }
 
