--- a/css/hall-of-fame.css
+++ b/css/hall-of-fame.css
@@ -20,7 +20,7 @@
 .hof-roles {
   margin-top: 0;
   font-size: 0.875em;
-  color: gray;
+  color: #767676;
 }
 
 /* Dark mode */
